Change tabs to spacing.